plugins 
{
	id 'java-library'
    
}

description = 'Provided service feature'

group = 'org.activecomponents.jadex'

if(System.getProperty("PUBLISH_SCRIPT_PATH"))
	apply from: System.getProperty("PUBLISH_SCRIPT_PATH")

java
{
	sourceCompatibility = '1.17'
}

repositories
{
	mavenCentral()
}

dependencies
{
	def v = System.getProperty('JADEX_VERSION')?:'+'
	implementation 'org.activecomponents.jadex:common:'+v
	implementation 'org.activecomponents.jadex:collection:'+v
	implementation 'org.activecomponents.jadex:traverser:'+v
	implementation 'org.activecomponents.jadex:javaparser:'+v
	implementation 'org.activecomponents.jadex:bytecode:'+v
	implementation 'org.activecomponents.jadex:core:'+v
	implementation 'org.activecomponents.jadex:model:'+v
	implementation 'org.activecomponents.jadex:execution:'+v
	//implementation 'org.activecomponents.jadex:micro:'+v
	implementation 'org.activecomponents.jadex:serialization:'+v
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
}
